# Hackcelerate

./: .env-example  .gitignore  DOCUMENTATION.md  README.md  compose.dev.yml  compose.prod.yml  memories.sqlite  pyproject.toml
frontend/: .env  Dockerfile.dev  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  config.js  index.css  main.jsx  routes.jsx
frontend/src/api/: apiClient.js  generalApi.js
frontend/src/components/: Navbar.jsx  TeamMemberCard.jsx  TextToVoice.jsx  VoiceToText.jsx
frontend/src/components/Graph/: RadarChart.jsx
frontend/src/hooks/: useMicrophonePermission.jsx  useMonitorSize.js
frontend/src/screens/: ContactScreen.jsx  HomeScreen.jsx  LoginScreen.jsx  TeamScreen.jsx
frontend/src/settings/: colourTheme.json  teamMembers.json
src/: face_recog_GUI.py  face_recog_names_GUI.py  facial_recognition.py  memories.sqlite  openai_api_example.py  rag.py  relay.py
src/Data/: ds_model_facenet512_detector_opencv_aligned_normalization_base_expand_0.pkl
src/Data/Elon Musk/: im-98621695.avif
tests/: predict_personality.py  test_llm.py  whisper-test.py
