[tool.poetry]
name = "start-voiceoasis"
version = "0.1.0"
description = ""
authors = ["Pascal Berger <pascal.berger@helbling.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
azure-cognitiveservices-speech = "^1.41.1"
flask = "^3.1.0"
requests = "^2.32.3"
flask-sock = "^0.7.0"
flask-cors = "^5.0.0"
flasgger = "^0.9.7.1"
openai = "^1.65.4"
python-dotenv = "^1.0.1"
torch = "^2.6.0"
sentence-transformers = "^3.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.0"
ruff = "^0.7.4"

[tool.coverage.run]
omit = ["tests/*", "__init__.py"]

# Linting
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "N", # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "D100",
    "D104",
    "B008",
    # temporary
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
]

[tool.ruff.lint.per-file-ignores]
"utils/mock_data.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
warn_return_any = "True"
warn_unused_configs = "True"
warn_unreachable = "True"
